@@ -3,7 +3,7 @@
 
 [1] Added a JNI wrapper for TurboJPEG/OSS.  See java/README for more details.
 
-[2] Ported jpgtest.cxx to pure C to avoid the need for a C++ compiler.
+[2] TurboJPEG/OSS can now scale down images during decompression.
 
 
 1.1.0
@@ -14,6 +14,8 @@ greater than 95, TurboJPEG/OSS will now automatically use the slow integer
 forward DCT when generating JPEG images of quality 96 or greater.  This
 reduces compression performance by as much as 15% for these high-quality images
 but is necessary to ensure that the images are perceptually lossless.
+
+[2] Ported jpgtest.cxx to pure C to avoid the need for a C++ compiler.
 
 
 1.0.90 (1.1 beta1)
